# swarm_project_robotsESPOL

./: .gitignore  README.md
data/: swarm_data_20250822_203010.csv  swarm_data_20250822_203010_summary.txt  swarm_data_20250822_203353.csv  swarm_data_20250822_203353_summary.txt  swarm_data_20250822_205414.csv  swarm_data_20250822_205414_summary.txt  swarm_data_20250822_212137.csv  swarm_data_20250822_212137_summary.txt
src/swarm_bringup/: CMakeLists.txt  package.xml
src/swarm_bringup/launch/: bringup_gz.launch.py  data_logger.launch.py  gazebo_world.launch.py  spawn_robots.launch.py  swarm_behavior.launch.py  swarm_flocking.launch.py
src/swarm_control/: package.xml  setup.py
src/swarm_control/swarm_control/: swarm_data_logger.py  swarm_flocking.py  swarm_flocking_without_collision.py  working_smooth_movement.py
src/swarm_robot_description/: CMakeLists.txt  package.xml
src/swarm_robot_description/launch/: display.launch.py  displayNew.launch.py  spawn.launch.py
src/swarm_robot_description/meshes/: Pod_link.STL  Sensor1_link.STL  Sensor2_link.STL  Sensor4_link.STL  base_link.STL
src/swarm_robot_description/models/swarm_robot_description/: Sensor3_link.STL  Thruster_link.STL  model.config  model.sdf
src/swarm_robot_description/urdf/: AzimuthURDFV3.csv  azimuth_bot.urdf.xacro  azimuth_bot_cad_version.urdf.xacro  robot.urdf
src/swarm_worlds/: CMakeLists.txt  package.xml
src/swarm_worlds/worlds/: flat_ocean.sdf  flat_ocean_without_tree.sdf
